doc/experimental-experiment/v0.1.1/_sources/auto_recipes/plot_exporter_recipes_c_named_ds_auto.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_recipes/plot_exporter_recipes_c_named_ds_auto.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_recipes_plot_exporter_recipes_c_named_ds_auto.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_recipes_plot_exporter_recipes_c_named_ds_auto.py:


.. _l-plot-exporter-recipes-custom-named-dynamic-shapes:

to_onnx: Rename Dynamic Shapes
==============================

Example given in :ref:`l-plot-exporter-dynamic_shapes` can only be exported
with dynamic shapes using ``torch.export.Dim.AUTO``. As a result, the exported
onnx models have dynamic dimensions with unpredictable names.

Model with unpredictable names for dynamic shapes
+++++++++++++++++++++++++++++++++++++++++++++++++

.. GENERATED FROM PYTHON SOURCE LINES 14-31

.. code-block:: Python


    import torch
    from experimental_experiment.helpers import pretty_onnx
    from experimental_experiment.torch_interpreter import to_onnx


    class Model(torch.nn.Module):
        def forward(self, x, y, z):
            return torch.cat((x, y), axis=1) + z[:, ::2]


    model = Model()
    x = torch.randn(2, 3)
    y = torch.randn(2, 5)
    z = torch.randn(2, 16)
    model(x, y, z)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    tensor([[-1.1579, -0.3361,  3.3007, -0.9606,  0.3264, -1.0081,  0.3647,  0.7752],
            [-1.1525, -0.7843,  1.4972,  0.2414,  0.4777,  1.0704,  1.6583, -0.8483]])



.. GENERATED FROM PYTHON SOURCE LINES 32-33

Let's export it.

.. GENERATED FROM PYTHON SOURCE LINES 33-41

.. code-block:: Python


    AUTO = torch.export.Dim.AUTO
    ep = torch.export.export(
        model,
        (x, y, z),
        dynamic_shapes=({0: AUTO, 1: AUTO}, {0: AUTO, 1: AUTO}, {0: AUTO, 1: AUTO}),
    )








.. GENERATED FROM PYTHON SOURCE LINES 42-43

Let's convert it into ONNX.

.. GENERATED FROM PYTHON SOURCE LINES 43-51

.. code-block:: Python


    onx = to_onnx(ep)

    for inp in onx.graph.input:
        print(f" input: {pretty_onnx(inp)}")
    for out in onx.graph.output:
        print(f"output: {pretty_onnx(out)}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     input: FLOAT[s35,s16] x
     input: FLOAT[s58,s43] y
     input: FLOAT[s7,s23] z
    output: FLOAT[s35,s16+s43] output_0




.. GENERATED FROM PYTHON SOURCE LINES 52-58

Rename the dynamic shapes
+++++++++++++++++++++++++

We just need to give the onnx exporter the same information
:func:`torch.export.export` was given but we replace ``AUTO``
by the name this dimension should have.

.. GENERATED FROM PYTHON SOURCE LINES 58-73

.. code-block:: Python


    onx = to_onnx(
        ep,
        dynamic_shapes=(
            {0: "batch", 1: "dx"},
            {0: "batch", 1: "dy"},
            {0: "batch", 1: "dx+dy"},
        ),
    )

    for inp in onx.graph.input:
        print(f" input: {pretty_onnx(inp)}")
    for out in onx.graph.output:
        print(f"output: {pretty_onnx(out)}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     input: FLOAT[batch,dx] x
     input: FLOAT[batch,dy] y
     input: FLOAT[batch,dx+dy] z
    output: FLOAT[batch,dx+dy] output_0




.. GENERATED FROM PYTHON SOURCE LINES 74-76

A model with an unknown output shape
++++++++++++++++++++++++++++++++++++

.. GENERATED FROM PYTHON SOURCE LINES 76-87

.. code-block:: Python



    class UnknownOutputModel(torch.nn.Module):
        def forward(self, x):
            return torch.nonzero(x)


    model = UnknownOutputModel()
    x = torch.randint(0, 2, (10, 2))
    model(x)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    tensor([[0, 0],
            [1, 0],
            [3, 0],
            [4, 0],
            [4, 1],
            [6, 1],
            [7, 0],
            [8, 0],
            [9, 0],
            [9, 1]])



.. GENERATED FROM PYTHON SOURCE LINES 88-89

Let's export it.

.. GENERATED FROM PYTHON SOURCE LINES 89-95

.. code-block:: Python


    ep = torch.export.export(
        model, (x,), dynamic_shapes=({0: torch.export.Dim("batch"), 1: AUTO},)
    )
    print(ep)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ExportedProgram:
        class GraphModule(torch.nn.Module):
            def forward(self, x: "i64[s35, s16]"):
                 # File: /home/xadupre/github/experimental-experiment/_doc/recipes/plot_exporter_recipes_c_named_ds_auto.py:80 in forward, code: return torch.nonzero(x)
                nonzero: "i64[u0, 2]" = torch.ops.aten.nonzero.default(x);  x = None
            
                 # 
                sym_size_int_2: "Sym(u0)" = torch.ops.aten.sym_size.int(nonzero, 0)
                sym_constrain_range_for_size_default = torch.ops.aten.sym_constrain_range_for_size.default(sym_size_int_2);  sym_constrain_range_for_size_default = None
            
                 # File: /home/xadupre/github/experimental-experiment/_doc/recipes/plot_exporter_recipes_c_named_ds_auto.py:80 in forward, code: return torch.nonzero(x)
                ge: "Sym(u0 >= 0)" = sym_size_int_2 >= 0;  sym_size_int_2 = None
                _assert_scalar_default = torch.ops.aten._assert_scalar.default(ge, "Runtime assertion failed for expression u0 >= 0 on node 'ge'");  ge = _assert_scalar_default = None
                return (nonzero,)
            
    Graph signature: 
        # inputs
        x: USER_INPUT
    
        # outputs
        nonzero: USER_OUTPUT
    
    Range constraints: {u0: VR[0, 9223372036854775806], s35: VR[0, int_oo], s16: VR[2, int_oo]}





.. GENERATED FROM PYTHON SOURCE LINES 96-97

Let's export it into ONNX.

.. GENERATED FROM PYTHON SOURCE LINES 97-105

.. code-block:: Python


    onx = to_onnx(ep, dynamic_shapes=({0: "batch", 1: "dx"},))

    for inp in onx.graph.input:
        print(f" input: {pretty_onnx(inp)}")
    for out in onx.graph.output:
        print(f"output: {pretty_onnx(out)}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     input: INT64[batch,dx] x
    output: INT64[NEWDIM_nonzero,2] output_0




.. GENERATED FROM PYTHON SOURCE LINES 106-112

The exporter has detected a dimension could not be infered
from the input shape somewhere in the graph and introduced a
new dimension name.
Let's rename it as well. Let's also change the output name
because the functionality may not be implemented yet when
the output dynamic shapes are given as a tuple.

.. GENERATED FROM PYTHON SOURCE LINES 112-124

.. code-block:: Python


    onx = to_onnx(
        ep,
        dynamic_shapes=({0: "batch", 1: "dx"},),
        output_dynamic_shapes={"zeros": {0: "num_zeros"}},
        output_names=["zeros"],
    )

    for inp in onx.graph.input:
        print(f" input: {pretty_onnx(inp)}")
    for out in onx.graph.output:
        print(f"output: {pretty_onnx(out)}")




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     input: INT64[batch,dx] x
    output: INT64[num_zeros,2] zeros





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 11.275 seconds)


.. _sphx_glr_download_auto_recipes_plot_exporter_recipes_c_named_ds_auto.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_exporter_recipes_c_named_ds_auto.ipynb <plot_exporter_recipes_c_named_ds_auto.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_exporter_recipes_c_named_ds_auto.py <plot_exporter_recipes_c_named_ds_auto.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_exporter_recipes_c_named_ds_auto.zip <plot_exporter_recipes_c_named_ds_auto.zip>`


.. include:: plot_exporter_recipes_c_named_ds_auto.recommendations


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
